--- a/index.html
+++ b/index.html
@@ -3,5 +3,10 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
+
+<?php
+// Show all information, defaults to INFO_ALL
+phpinfo();
+?>
 </body>
 </html>
